============================================================
=== 2016
1.8.10alpha
	factorize common code in locarna, locarna_p and sparse (MainHelper)
	Add stockholm support input and output to locarna
        Fix bug occuring with empty input sequences
	Call alifold with /best/ parameters (from perl /and/ c++)
	Fix locarnate (compatibility to current locarna); add unit test

1.8.9   (2016-21-04)
	improve configuration
	improve ubuntu packaging
	fix anchor constraint check in mlocarna fasta input
	allow ribofit for mea -- e.g. for probabilistic; this used to require ribosum

1.8.8   (2016-15-04)
	adapt to and require ViennaRNA >=2.2.4
	fix all static linking
	link binaries statically to libLocARNA by default;
	otherwise use --enable-dynamic-binaries
	fix & clean up code (after cppcheck static analysis)
	prepare for rpm packaging

============================================================
=== 2015

1.8.7	(2015-11-12)
	prepare for Ubuntu packaging
	fix man pages
	  - update generation (add missing man pages)
	  - fix program names
	  - improve/fix help/man of binaries and locarnate
	clean exploc_p (get rid of "in"-mechanism)
	fix problems in tests (make check) w/o enable-debug
	remove wrong MultipleAlignment format check
	remove locarna.pl from distribution (functionally replaced by binary)
1.8.6   (2015-10-31)
	remove unused parameter "width" from locarna_rnafold_pp
	Increase API version to 1.4
	Get rid of locarna.hh
	In clustal(-like) alignment output, adapt formatting to long names
	Improve libRNA config, in cases where pkg-config does not work:
	allow compiling without libgomp, if libgomp is unavailable and
	is not used by libRNA
1.8.5a
	Fix behavior in case structure constraints + local folding (see 1.8.2)

1.8.5   (2015-10-10)
	allow empty input sequences/alignments and fix related problems
	fix score of local alignment w/ empty input sequences

1.8.4   (2015-10-6)
	fix potential overwriting of parameters in classes Aligner*,